@@ -1,3 +1,12 @@
+2015-06-06 Massimo Manghi <mxmanghi@apache.org>
+    * src/mod_rivet/rivet_worker_mpm.c: found a solution for determining
+    the current thread pool. Mutex and cond variable are allocated from it
+    but never destroyed. Still have to understand if letting the pool go
+    is enough for a clean deletion of them
+    * src/mod_rivet/rivetInspect.c: a pesky 'static' declaration of
+    a local variable was still existing and under intense request firing 
+    threads stumbled on it.
+
 2015-06-03 Massimo Manghi <mxmanghi@apache.org>
     * doc/rivet.css: changing selector for namespace table as DocBook
     seems not to honor the id attribute anymore
